# metanihil

./: .env_example  .gitignore  README.md  book.md  book2.md  fix_toc.py  luigi.cfg  pyproject.toml
.llm/logs/: llm_20250708_220634_224_REQUEST.txt  llm_20250708_220651_310_RESPONSE.txt
api/: deps.py  main.py  models.py  start.py
api/routers/: analyze.py  chunks.py  document.py  entities.py  graph.py  processing.py  relationships.py  search.py  status.py
components/: pdf_llm_processor.py  structured_task.py
data/writer_storage/faiss/: faiss_metadata.json  id_mapping.json
docs/: TOC.md  TOC_short.md  TOC_short.txt
llm/: __init__.py  adapter.py  anthropic_client.py  base.py  embeddings_cache.py  embeddings_client.py  json_utils.py  models.py  ollama_client.py  openai_client.py  utils.py
ocr/: __init__.py  base.py  gui.py  surya_client.py  surya_manager.py
pipeline/structure/: README.md  __init__.py  config.py  config.yaml  run_structure_pipeline.py
pipeline/structure/tasks/: __init__.py  semantic_structure_detector.py  structure_detector.py  structure_splitter.py
pipeline/writer/: config.yaml  config_loader.py  database.py  models.py  parser.py  run_pipeline.py  toc_parser.py
pipeline/writer/tasks/: base_writer_task.py  create_summary_task.py  embed_toc_task.py  final_qa_task.py  master_control_task.py  parse_toc_task.py  process_chunks_task.py  quality_check_task.py  revision_task.py
writer/: embedder.py  faiss_manager.py  hierarchical_utils.py  models.py  persistence.py  writer_service.py
